# masters_project_2019

./: .gitignore  DiplomskiRadPrezentacija.pptx  README.md  Rad.txt  diplomski.tex
chapters/: formule.tex  slike.tex
code/: carla_properties.py  data_collector.py  data_saver.py  gui.py  lidar_properties.py  spawn_car.py  spawn_cars.py  start_carla.py  test_script.py  tutorial.md  utils.py
code/output/: relative_transform.txt
code/output/actor_transforms/: 000185.txt  000195.txt  000205.txt  000215.txt  000225.txt  000235.txt  000245.txt  000255.txt  000263.txt  000264.txt  000265.txt  000266.txt  000267.txt  000268.txt  000269.txt  000270.txt  000271.txt  000272.txt  000273.txt  000274.txt  000275.txt  000276.txt  000277.txt  000278.txt  000279.txt  000280.txt  000281.txt  000282.txt  000283.txt  000284.txt  000285.txt  000286.txt  000287.txt  000288.txt  000289.txt  000290.txt  000291.txt  000292.txt  000293.txt  000294.txt  (+481 more)
code/output/icp_results/: 000185-000195.txt  000195-000205.txt  000205-000215.txt  (+495 more)
code/properties/: carla_properties.py
code/scan_examples/: Scan1.ply  Scan2.ply  Scan3.ply  Scan4.ply  Scan5.ply
code/utils/: utils.py
documentation/: Izvori.txt  README.MD  Rad.txt  diplomski.tex  literatura.bib
documentation/chapters/: ekperimentalni_rezultati.tex  uvod.tex  zakljucak.tex
documentation/examples/: formule.tex  kod.tex
doumentation/: README.MD  diplomski.tex
projects/icp-algorithm/: build.gradle.kts  settings.gradle
projects/icp-graphs/: build.gradle.kts  settings.gradle
projects/pcl/: CMakeLists.txt  main.cpp  pcl_test.cpp
(+590 files in other folders)
