cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PCL_MASTERS)
find_package(PCL 1.9 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_main ${PROJECT_SOURCE_DIR}/main.cpp)
target_link_libraries(pcl_main ${PCL_LIBRARIES})